--- a/app/views/kids/index.html.erb
+++ b/app/views/kids/index.html.erb
@@ -16,6 +16,17 @@
     <%end%>
     <% if registered?(k)%>
       <h3>Registered for <%=k.course.title%>, <%=k.course.start_time%></h3>
+      <div id="body-<%=k.course.id%>"><%=truncate k.course.description%></div>
+      <div id="desc-<%=k.course.id%>"><%= link_to '...See more', '', class: "read-more-#{k.course.id}" %></div>
+      <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+      <script src="http://code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
+      <script>
+        $('.read-more-<%= k.course.id %>').on('click', function(e) {
+          e.preventDefault()
+          $('#body-<%=k.course.id%>').html('<%= escape_javascript k.course.description %>')
+          $('#desc-<%=k.course.id%>').hide()
+        })
+      </script>
     <%end%>
   </div>
 
@@ -24,3 +35,18 @@
 <h2><%=link_to "Add more kids", new_parent_kid_path(@parent)%></h2>
 <%=render partial: 'sessions/logout'%>
 <%=render partial: 'parents/goback'%>
+
+
+
+<!-- <script type="text/javascript" charset="utf-8">
+  $(function () {
+    $(".js-more").on('click', function() {
+      var id = $(this).data("id");
+      $.get("/course/" + id + ".json" , function(data) {
+
+        // Replace text of body-id div
+        $("#body-" + id).html(data["description"]);
+      });
+    });
+  });
+</script> -->
