--- a/app/assets/stylesheets/welcome.css
+++ b/app/assets/stylesheets/welcome.css
@@ -41,3 +41,11 @@ a:hover {
   border-radius: 10px;
   background-color: #f9d6eb;
 }
+
+.button {
+  display: block;
+  width: auto;
+  margin: 20px;
+  border: 3px solid #f9d6eb;
+  border-radius: 10px;
+}
