fixed authentication issues, changed color scheme

--- a/app/assets/stylesheets/parent.scss
+++ b/app/assets/stylesheets/parent.scss
@@ -1,20 +1,20 @@
 // Place all the styles related to the Parent controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-body {
-  margin: 30px;
-  color: #874f6a;
-  background-color: #e0c7d3;
-}
-
-a {
-  color: #513944;
-}
-
-a:visited {
-  color: #473f43;
-}
-
-a:hover {
-  color: #f9439e;
-}
+// body {
+//   margin: 30px;
+//   color: #874f6a;
+//   background-color: #e0c7d3;
+// }
+//
+// a {
+//   color: #513944;
+// }
+//
+// a:visited {
+//   color: #473f43;
+// }
+//
+// a:hover {
+//   color: #f9439e;
+// }
