--- a/app/views/parents/_style.html.erb
+++ b/app/views/parents/_style.html.erb
@@ -1,12 +1,12 @@
 <h1>Register Your Kid!</h1>
 <img src="http://myfrenchclasses.org/sites/myfrenchclasses.org/files/art_class.jpg" alt="" width="300">
-<div class="button"><h3 id="about">What are we about?</h3></div>
+<div class="button"><h3 id="about">Why use this app?</h3></div>
 <div class="button"><h3 id="beliefs">What do we believe in?</h3></div>
 <div class="button"><h3 id="why">Why sign up?</h3></div>
 
 <script>
   $('#about').click(function(){
-    $(this).text("An app that lets you browse, select, and sign up your child for very educational and enriching art or music classes. You can also become part of our community and create a class!")
+    $(this).text("This is an app that lets you browse, select, and sign up your child for very educational and enriching art or music classes. You can also become part of our community and create a class!")
   });
 
   $('#beliefs').click(function(){
