--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -29,7 +29,7 @@
   <h3 id="courseTeacher"></h3>
 </div>
 
-<%=render partial: 'parents/goback'%>
+<%= render partial: 'parents/nav' %>
 
 <script type="text/javascript" charset="utf-8">
   $(function () {
