--- a/app/views/kids/show.html.erb
+++ b/app/views/kids/show.html.erb
@@ -13,7 +13,7 @@
     <p></p>
 
   <%end%>
-  <%=render partial: 'parents/goback'%>
+  <%= render partial: 'parents/nav' %>
 
 <%else%>
   <p>You need to be logged in to see this.</p>
