--- a/app/assets/stylesheets/welcome.css
+++ b/app/assets/stylesheets/welcome.css
@@ -5,7 +5,7 @@ body {
   border: 4px solid #fc4ed3;
   border-radius: 7px;
   width: 60%;
-  margin: 20px auto;
+  margin: 90px auto;
   text-align: center;
   padding: 20px;
 }
@@ -72,4 +72,71 @@ a:hover {
 
 .notice {
   color: #0787f7;
+}
+
+/*nav menu*/
+
+#hamburger {
+  background-color: #fc4ed3;
+  position: fixed;
+  top: 0;
+  left: 0;
+  border-radius: 5px 5px 5px 5px;
+  margin: 20px;
+  margin-left: 50px;
+  border: 1px solid #35CDD1;
+  line-height: 2.5em;
+  font-family: monospace;
+  font-size: 20px;
+  padding: 1px 13px;
+  opacity: 0.8;
+  color: #C4EFDA;
+  z-index: 100;
+}
+
+.nav {
+  overflow: hidden;
+  background-color: #f7f9f8;
+  position: fixed;
+  top: 0;
+  left: 0;
+  border-radius: 5px 5px 5px 5px;
+  margin: 10px;
+  margin-left: 50px;
+  border: 1px solid #35CDD1;
+  display: block;
+  line-height: 2.5em;
+  font-family: monospace;
+  font-size: 16px;
+  padding: 8px;
+  opacity: 0.8;
+  z-index: 100;
+}
+
+.nav a {
+  display: block;
+}
+.nav a:hover {
+  color: #fc4ed3;
+}
+
+#cross {
+  text-decoration: none;
+  font-size: 19px
+}
+
+#top {
+  text-align: center;
+  padding: 10px;
+  display: block;
+  margin: 30px auto;
+  font-size: 20px;
+  border: 3px solid #23C6B3;
+  border-radius: 80px;
+  background: #C4EFDA;
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+  z-index: 100;
+  opacity: 0;
 }
