--- a/app/views/parents/new.html.erb
+++ b/app/views/parents/new.html.erb
@@ -1,4 +1,5 @@
-<%= render 'style' %>
+<h1>Register Your Kid!</h1>
+<img src="http://myfrenchclasses.org/sites/myfrenchclasses.org/files/art_class.jpg" alt="" width="300">
 
 <% if flash[:notice] %>
   <h2><div class="notice"><%= flash[:notice] %></div></h2>
@@ -31,3 +32,5 @@
 <%end%>
 
 <p>Not a new user? <%= link_to "Log in!", login_path %></p>
+
+<%= render 'welcome_nav' %>
