--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -6,5 +6,4 @@
   <h3><%=link_to "#{c.title}", course_path(c)%></h3>
 <%end%>
 
-<%=render partial: 'sessions/logout'%>
-<%=render partial: 'parents/goback'%>
+<%= render partial: 'parents/nav' %>
