--- a/app/views/parents/show.html.erb
+++ b/app/views/parents/show.html.erb
@@ -12,6 +12,8 @@
       <%end%>
     <%end%>
   <%end%>
+  <p><%= link_to "Browse Courses + Sign Your Kids Up", courses_path %></p>
+
 <%else%>
   <p>You need to be logged in to see this.</p>
 <%end%>
