--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -47,6 +47,7 @@ $(function () {
       $("#description").text(values["description"]);
       $("#teacher").text(values["teacher"]);
       $("#age_group").text('age group:' + values["age_group"]);
+      //I need to later work on getting enrolled kids to display, for now hiding those 
       $(".kids").hide();
       $("#signedupborder").hide();
 
